# serverless-python-api

./: .gitignore  README.md  app.py  package-lock.json  pyproject.toml  requirements.txt  serverless.yml
events/: hello.http
